--- a/templates/users/main.html.twig
+++ b/templates/users/main.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
     <div class="container">
         <div class="button_container">
-            <a href="{{ path('driver_new') }}" class="primaryButton"><i class="ti ti-table-plus"></i>Nuevo conductor</a>
+            <a href="{{ path('driver_new') }}" class="primaryButton"><i class="ti ti-plus"></i>Nuevo conductor</a>
         </div>
         <div class="card_container">
             {% for driver in pagination %}
