--- a/templates/schedule/main.html.twig
+++ b/templates/schedule/main.html.twig
@@ -6,7 +6,7 @@
             <div class="schedule_form_container">
                 <p>Todavia no has registrado tu horario. Para poder viajar con un grupo es necesario el horario</p>
                 <div class="button_container">
-                    <a href="{{ path('schedule_create') }}" class="primaryButton"><i class="ti ti-table-plus"></i>Añadir horario</a>
+                    <a href="{{ path('schedule_create') }}" class="primaryButton"><i class="ti ti-plus"></i>Añadir horario</a>
                 </div>
             </div>
         {% else %}
