--- a/templates/trip/index.html.twig
+++ b/templates/trip/index.html.twig
@@ -29,7 +29,7 @@
             </table>
         </div>
         <div class="button_container">
-            <a href="{{ path('timetable_mod', {'id':group}) }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
+            <a href="{{ path('timetable_main', {'id':group}) }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
         </div>
     </div>
 {% endblock %}
