--- a/templates/trip/new.html.twig
+++ b/templates/trip/new.html.twig
@@ -38,7 +38,7 @@
         </table>
     </div>
     <div class="button_container">
-        <a href="{{ path('timetable_mod', {'id':group.id}) }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
+        <a href="{{ path('timetable_main', {'id':group.id}) }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
     </div>
 </div>
 {% endblock %}
