--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,25 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block header %}{% endblock %}
+{% block stylesheets %}
+    <link href="{{ asset('css/login.css')}}" type="text/css" rel="stylesheet">
+{% endblock %}
 
 {% block body %}
-    <div class="login_container">
-        <div class="login_form_container">
+    <div class="background-highlight">
+        <div class="login-container">
+            <img src="{{ asset('images/LogoCommunWheelsWhite2.png') }}" alt="Logo" class="placeholder-image">
+            <h1>Iniciar sesión</h1>
+            {% if error %}
+                <h2 style="color: red">{{ error.message }}</h2>
+            {% endif %}
             <form method="post">
-                <h2>CommunWheels</h2>
-                <h3>Iniciar sesión</h3>
-                {% if error %}
-                    <h2 style="color: red">{{ error.message }}</h2>
-                {% endif %}
-                <input type="text" value="{{ last_username }}" name="_username" placeholder="Usuario" required {% if not error %}autofocus{% endif %}>
-                <input type="password" name="_password" placeholder="Contraseña" required {% if error %}autofocus{% endif %}>
-                <div class="buttons">
-                    <button type="submit" class="primaryButton">Entrar</button>
+                <label for="username">Usuario:</label>
+                <input type="text" id="username" name="_username" required>
+                <label for="password">Contraseña:</label>
+                <div class="password-container">
+                    <input type="password" id="password" name="_password" required {% if error %}autofocus{% endif %}>
+                    <button type="button" id="togglePassword" class="toggle-password">
+                        <i class="ti ti-eye-off"></i>
+                    </button>
                 </div>
+                <input type="submit" value="Iniciar sesión">
             </form>
         </div>
-        <div class="logo">
-            <img src="{{ asset('images/LogoCommunWheelsWhite2.png') }}" alt="Logo">
-        </div>
     </div>
+    <script>
+        document.getElementById('togglePassword').addEventListener('click', function () {
+            const passwordInput = document.getElementById('password');
+            const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+            passwordInput.setAttribute('type', type);
+            this.innerHTML = type === 'password' ? '<i class="ti ti-eye-off"></i>' : '<i class="ti ti-eye"></i>';
+        });
+    </script>
 {% endblock %}
