--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -5,10 +5,17 @@
     --back-color-blur: hsla(192, 19%, 15%, 0.25);
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
+/* Estilos de la barra de navegación */
 .navbar {
     background-color: var(--back-color);
     position: fixed;
     width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .navbar ul {
@@ -21,6 +28,7 @@
 
 .navbar li {
     height: 50px;
+    position: relative;
 }
 
 .navbar a {
@@ -41,6 +49,7 @@
     margin-right: auto;
 }
 
+/* Estilos del sidebar */
 .sidebar {
     position: fixed;
     top: 0;
@@ -54,7 +63,8 @@
     display: none; /* Asegurarse de que esté oculto por defecto */
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: flex-start; /* Asegura que los elementos se alineen al inicio del contenedor */
+    padding-top: 20px; /* Añade espacio en la parte superior */
 }
 
 .sidebar li {
@@ -63,12 +73,44 @@
 
 .sidebar a {
     width: 100%;
+    padding: 15px 20px; /* Espaciado para los enlaces del sidebar */
 }
 
+/* Estilos del botón del menú */
 .menuButton {
     display: none;
 }
 
+/* Estilos del menú desplegable */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: block;
+    max-height: 0;
+    overflow: hidden;
+    position: absolute;
+    background-color: var(--back-color);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    min-width: 100%;
+    transition: max-height 0.3s ease-out;
+}
+
+.dropdown-content a {
+    color: var(--text-color);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: var(--hover-color);
+}
+
+/* Media queries */
 @media(max-width: 700px) {
     .hideOnMobile {
         display: none;
