--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,24 +1,34 @@
-{% set current_path = app.request.get('_route')|split('_') %}
-<div class="navbar">
-    <ul class="sidebar">
-        <li><a href="#"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg></a></li>
-        <li><a href="{{ path('user_panel') }}"><i class="ti ti-user-filled"></i> {{ app.user.driver }} </a></li>
-        <li><a href="{{ path('app_logout') }}"><i class="ti ti-logout"></i>Log Out</a></li>
-    </ul>
-    <ul>
-        <li>
-            <a href="{{ path('main') }}">CommunWheels</a>
-        </li>
-        <li class="hideOnMobile">
-            <a href="{{ path('user_panel') }}">
-                {% if app.user.driver is null %}
-                    {{ app.user }} <i class="ti ti-user-filled"></i>
-                {% else %}
-                    {{ app.user.driver }} <i class="ti ti-user-filled"></i>
-                {% endif %}
-            </a>
-        </li>
-        <li class="hideOnMobile"><a href="{{ path('app_logout') }}">Log Out <i class="ti ti-logout"></i></a></li>
-        <li class="menuButton"><a href="#"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-menu-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 6l16 0" /><path d="M4 12l16 0" /><path d="M4 18l16 0" /></svg></a></li>
-    </ul>
-</div>
+{% set current_path = app.request.get('_route') %}
+{% if current_path != 'app_login' %}
+    <div class="navbar">
+        <ul class="sidebar">
+            <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg></a></li>
+            {% if app.user %}
+                <li><a href="{{ path('user_panel') }}"><i class="ti ti-user-filled"></i> {{ app.user.driver }} </a></li>
+            {% endif %}
+            <li><a href="{{ path('app_logout') }}"><i class="ti ti-logout"></i>Log Out</a></li>
+        </ul>
+        <ul>
+            <li>
+                <a href="{{ path('main') }}">CommunWheels</a>
+            </li>
+            {% if app.user %}
+                <li class="hideOnMobile">
+                    <a href="#" id="userDropdown">
+                        {% if app.user.driver is null %}
+                            <i class="ti ti-user-filled"></i> {{ app.user }}
+                        {% else %}
+                            <i class="ti ti-user-filled"></i> {{ app.user.driver }}
+                        {% endif %}
+                    </a>
+                    <div class="dropdown-content">
+                        <a href="{{ path('user_panel') }}">Panel de Usuario</a>
+                        <a href="{{ path('app_logout') }}"><i class="ti ti-logout"></i>Log Out</a>
+                    </div>
+                </li>
+
+            {% endif %}
+            <li class="menuButton"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-menu-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 6l16 0" /><path d="M4 12l16 0" /><path d="M4 18l16 0" /></svg></a></li>
+        </ul>
+    </div>
+{% endif %}
