--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -25,7 +25,7 @@
                         <i class="ti ti-eye-off"></i>
                     </button>
                 </div>
-                <input type="submit" value="Iniciar sesión">
+                <button type="submit" class="primaryButton">Iniciar Sesión</button>
             </form>
         </div>
     </div>
