--- a/templates/schedule/main.html.twig
+++ b/templates/schedule/main.html.twig
@@ -11,7 +11,7 @@
             </div>
         {% else %}
             <div class="form_container">
-                <h2 class="titulo">Horario de {{ app.user.driver }} ID: {{ app.user.driver.id }}</h2>
+                <h2 class="titulo">Horario de {{ app.user.driver }}</h2>
                 {% set weekdays = {1: 'Lunes', 2: 'Martes', 3: 'Miércoles', 4: 'Jueves', 5: 'Viernes'} %}
                 <table>
                     <thead>
@@ -35,13 +35,13 @@
                         <tr>
                             <td>{{ hourIntervals[hour] }}</td>
                             {% for day in 1..5 %}
-                                {% set isWithinSchedule = false %}
+                                {% set isInSchedule = false %}
                                 {% for schedule in schedules %}
                                     {% if schedule.weekDay == day and hour >= schedule.entrySlot and hour <= schedule.exitSlot %}
-                                        {% set isWithinSchedule = true %}
+                                        {% set isInSchedule = true %}
                                     {% endif %}
                                 {% endfor %}
-                                <td class="{% if isWithinSchedule %}active_hour{% endif %}"></td>
+                                <td class="{% if isInSchedule %}active_hour{% endif %}"></td>
                             {% endfor %}
                         </tr>
                     {% endfor %}
