--- a/templates/notify/main.html.twig
+++ b/templates/notify/main.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         <div class="button_container">
-            <a href="{{ path('new_absence') }}" class="primaryButton"><i class="ti ti-plus"></i>Nuevo ausencia</a>
+            <a href="{{ path('new_absence', {'id':app.user.driver.id}) }}" class="primaryButton"><i class="ti ti-plus"></i>Nuevo ausencia</a>
         </div>
         <div class="card_container">
             {% for absence in absences %}
