--- a/templates/schedule/main.html.twig
+++ b/templates/schedule/main.html.twig
@@ -6,7 +6,8 @@
             <div class="schedule_form_container">
                 <p>Todavia no has registrado tu horario. Para poder viajar con un grupo es necesario el horario</p>
                 <div class="button_container">
-                    <a href="{{ path('schedule_create') }}" class="primaryButton"><i class="ti ti-plus"></i>Añadir horario</a>
+                    <a href="{{ path('schedule_create') }}" class="primaryButton"><i class="ti ti-plus"></i>Añadir
+                        horario</a>
                 </div>
             </div>
         {% else %}
@@ -48,8 +49,10 @@
                     </tbody>
                 </table>
                 <div class="button_container">
-                    <a href="{{ path('schedule_update', {'id':app.user.driver.id}) }}" class="primaryButton"><i class="ti ti-edit"></i>Modificar</a>
-                    <a href="{{ path('user_panel') }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
+                    <a href="{{ path('schedule_update', {'id':app.user.driver.id}) }}" class="primaryButton"><i
+                                class="ti ti-edit"></i>Modificar</a>
+                    <a href="{{ path('user_panel') }}" class="secondaryButton"><i
+                                class="ti ti-arrow-left"></i>Volver</a>
                 </div>
             </div>
         {% endif %}
