--- a/templates/timeTable/modificar.html.twig
+++ b/templates/timeTable/modificar.html.twig
@@ -1,86 +1,101 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="container">
-    {% if is_granted('ROLE_GROUP_ADMIN') %}
+    <div class="container">
+        {% if is_granted('ROLE_GROUP_ADMIN') %}
+            <div class="button_container">
+                <a href="{{ path('timeTable_new', {'id':group.id}) }}" class="primaryButton"><i class="ti ti-plus"></i>Generar
+                    Cuadrante</a>
+            </div>
+        {% endif %}
+        <div class="card_container">
+            <h2 class="titulo">Cuadrantes del grupo {{ group.name }}</h2>
+            {% for timeTable in pagination %}
+                <div class="expandable-container">
+                    <div class="expandable">
+                        <span class="title">{{ timeTable.weekStartDate | date('d-m-Y') }}</span>
+                        <div class="icons">
+                            <a href="#" class="btn edit">
+                                <i class="ti ti-edit" style="font-size: 1.5rem"></i>
+                            </a>
+                            <a href="#" class="btn delete" onclick="confirmDelete({{ timeTable.id }})"><i
+                                        class="ti ti-trash" style="font-size: 1.5rem"></i></a>
+                            <span class="icon"><i class="ti ti-caret-down-filled" style="font-size: 1.5rem"></i></span>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <div class="card-grid">
+                            <div class="expanded_card">
+                                <p class="label">Grupo</p>
+                                <p class="value">{{ timeTable.band.name }}</p>
+                            </div>
+                            <div class="expanded_card">
+                                <p class="label">Estado</p>
+                                <p class="value">{{ timeTable.active ? 'Activo':'Inactivo' }}</p>
+                            </div>
+                            <div class="expanded_card">
+                                <a href="{{ path('see_timetable', {'id':timeTable.id}) }}" class="primaryButton">Más info</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        {# display navigation #}
+        <div class="paginator">
+            {{ knp_pagination_render(pagination) }}
+        </div>
         <div class="button_container">
-            <a href="{{ path('trip_new', {'id':group.id}) }}" class="primaryButton"><i class="ti ti-plus"></i>Generar
-                Cuadrante</a>
+            <a href="{{ path('group_main') }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
         </div>
-    {% endif %}
-    <div class="card_container">
-        <h2 class="titulo">Cuadrantes del grupo {{ group.name }}</h2>
-        {% for timeTable in timeTablesGroup %}
-        <div class="expandable-container">
-            <div class="expandable">
-                <span class="title">{{ timeTable.weekStartDate | date('d-m-Y') }}</span>
-                <div class="icons">
-                    <a href="#" class="btn edit">
-                        <i class="ti ti-edit" style="font-size: 1.5rem"></i>
-                    </a>
-                    <a href="#" class="btn delete" onclick="confirmDelete({{ timeTable.id }})"><i
-                                class="ti ti-trash" style="font-size: 1.5rem"></i></a>
-                    <span class="icon"><i class="ti ti-caret-down-filled" style="font-size: 1.5rem"></i></span>
-                </div>
-            </div>
-            <div class="content">
-                <div class="card-grid">
-                    <div class="expanded_card">
-                        <p class="label">Grupo</p>
-                        <p class="value">{{ timeTable.band.name }}</p>
-                    </div>
-                    <div class="expanded_card">
-                        <p class="label">Estado</p>
-                        <p class="value">{{ timeTable.active ? 'Activo':'Inactivo' }}</p>
-                    </div>
-                    <div class="expanded_card">
-                        <a href="#" class="primaryButton">Más info</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
     </div>
-    <div class="button_container">
-        <a href="{{ path('group_main') }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
-    </div>
-</div>
-<script>
-    function confirmDelete(id) {
-        Swal.fire({
-            title: '¿Estás seguro?',
-            text: "¡No podrás recuperar este cuadrante!",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#8E6C88',
-            cancelButtonColor: '#80CED7',
-            confirmButtonText: 'Sí, eliminarlo',
-            cancelButtonText: 'Cancelar'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                $.ajax({
-                    url: '{{ path('timetable_delete', {'id': 'ID_PLACEHOLDER'}) }}'.replace('ID_PLACEHOLDER', id),
-                    type: 'DELETE',
-                    success: function (response) {
-                        Swal.fire(
-                            '¡Eliminado!',
-                            'El cuadrante ha sido eliminado.',
-                            'success'
-                        ).then(() => {
-                            window.location.href = '{{ path('timetable_main', {'id':group.id}) }}';
-                        });
-                    },
-                    error: function (xhr) {
-                        Swal.fire(
-                            'Error',
-                            'Hubo un problema al eliminar el cuadrante.',
-                            'error'
-                        );
-                    }
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <script>
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: '{{ message }}',
                 });
-            }
-        })
-    }
-</script>
+            </script>
+        {% endfor %}
+    {% endfor %}
+    <script>
+        function confirmDelete(id) {
+            Swal.fire({
+                title: '¿Estás seguro?',
+                text: "¡No podrás recuperar este cuadrante!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#8E6C88',
+                cancelButtonColor: '#80CED7',
+                confirmButtonText: 'Sí, eliminarlo',
+                cancelButtonText: 'Cancelar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url: '{{ path('timetable_delete', {'id': 'ID_PLACEHOLDER'}) }}'.replace('ID_PLACEHOLDER', id),
+                        type: 'DELETE',
+                        success: function (response) {
+                            Swal.fire(
+                                '¡Eliminado!',
+                                'El cuadrante ha sido eliminado.',
+                                'success'
+                            ).then(() => {
+                                window.location.href = '{{ path('timetable_main', {'id':group.id}) }}';
+                            });
+                        },
+                        error: function (xhr) {
+                            Swal.fire(
+                                'Error',
+                                'Hubo un problema al eliminar el cuadrante.',
+                                'error'
+                            );
+                        }
+                    });
+                }
+            })
+        }
+    </script>
 {% endblock %}
 
