--- a/templates/trip/new.html.twig
+++ b/templates/trip/new.html.twig
@@ -2,11 +2,35 @@
 
 {% block body %}
     <div class="container">
-        <h1 class="titulo">Detalles del cuadrante</h1>
-        <h2 class="titulo">Cuadrante del grupo con ID: {{ group.id }}</h2>
         <div class="form_container">
-            <h2>{{ timeTable.band.name }}</h2>
-            <h2>{{ timeTable.weekStartDate | date('d/m/y') }}</h2>
+            <h2>{{ timeTable.band.name }} -> ID: {{ timeTable.id }}</h2>
+            <h2>{{ timeTable.weekStartDate | date('d/m/y') }}-{{ (timeTable.weekStartDate | date_modify('+5 days')) | date('d/m/y') }}</h2>
+            {% set weekdays = {1: 'Lunes', 2: 'Martes', 3: 'Miércoles', 4: 'Jueves', 5: 'Viernes'} %}
+            <table>
+                <thead>
+                <tr>
+                    <th>Hora</th>
+                    {% for i in 1..5 %}
+                        <th>{{ weekdays[i] }}</th>
+                    {% endfor %}
+                </tr>
+                </thead>
+                <tbody>
+                {% set hourIntervals = {
+                    1: '8:15 - 9:15',
+                    2: '9:15 - 10:15',
+                    3: '10:15 - 11:15',
+                    4: '11:45 - 12:45',
+                    5: '12:45 - 13:45',
+                    6: '13:45 - 14:45'
+                } %}
+                {% for hour in 1..6 %}
+                    <tr>
+                        <td>{{ hourIntervals[hour] }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
         </div>
         <div class="button_container">
             <a href="{{ path('timetable_main', {'id':group.id}) }}" class="secondaryButton"><i
