--- a/templates/users/main.html.twig
+++ b/templates/users/main.html.twig
@@ -10,10 +10,12 @@
                     <div class="expandable">
                         <span class="title">{{ driver.name }} {{ driver.lastName }}</span>
                         <div class="icons">
-                            <a href="{{ path('driver_mod', {'id': driver.id, 'redirect': app.request.uri}) }}" class="btn edit">
+                            <a href="{{ path('driver_mod', {'id': driver.id, 'redirect': app.request.uri}) }}"
+                               class="btn edit">
                                 <i class="ti ti-edit" style="font-size: 1.5rem"></i>
                             </a>
-                            <a href="#" class="btn delete" onclick="confirmDelete({{ driver.id }})"><i class="ti ti-trash" style="font-size: 1.5rem"></i></a>
+                            <a href="#" class="btn delete" onclick="confirmDelete({{ driver.id }})"><i
+                                        class="ti ti-trash" style="font-size: 1.5rem"></i></a>
                             <span class="icon"><i class="ti ti-caret-down-filled" style="font-size: 1.5rem"></i></span>
                         </div>
                     </div>
@@ -62,7 +64,7 @@
                     $.ajax({
                         url: '{{ path('driver_delete', {'id': 'ID_PLACEHOLDER'}) }}'.replace('ID_PLACEHOLDER', groupId),
                         type: 'DELETE',
-                        success: function(response) {
+                        success: function (response) {
                             Swal.fire(
                                 '¡Eliminado!',
                                 'El usuario ha sido eliminado.',
@@ -71,7 +73,7 @@
                                 window.location.href = '{{ path('driver_main') }}';
                             });
                         },
-                        error: function(xhr) {
+                        error: function (xhr) {
                             Swal.fire(
                                 'Error',
                                 'Hubo un problema al eliminar el usuario.',
