--- a/templates/users/modificar.html.twig
+++ b/templates/users/modificar.html.twig
@@ -13,6 +13,7 @@
             <input type="hidden" name="redirect" value="{{ app.request.get('redirect') }}">
             <div class="buttons">
                 <button type="submit" class="primaryButton">Guardar</button>
+                <a href="{{ path('app_change_user_password', {'id':driver.id}) }}" class="secondaryButton">Cambiar contraseña</a>
             </div>
             {{ form_end(form) }}
         </div>
