--- a/templates/users/panel.html.twig
+++ b/templates/users/panel.html.twig
@@ -4,5 +4,10 @@
     <div class="container">
         {% include 'users/card_personal.html.twig' %}
         {% include 'schedule/card.html.twig' %}
+
+        <a href="{{ path('app_change_password') }}" class="card">
+            <i class="ti ti-brand-samsungpass" style='font-size: 8rem;'></i>
+            <h3>Cambiar contraseña</h3>
+        </a>
     </div>
 {% endblock %}
