--- a/templates/trip/new.html.twig
+++ b/templates/trip/new.html.twig
@@ -4,14 +4,14 @@
     <div class="container">
         <div class="form_container">
             <h2>{{ timeTable.band.name }}</h2>
-            <h2>{{ timeTable.weekStartDate | date('d/m/y') }}-{{ (timeTable.weekStartDate | date_modify('+5 days')) | date('d/m/y') }}</h2>
+            <h2>{{ timeTable.weekStartDate | date('d/m/y') }}
+                -{{ (timeTable.weekStartDate | date_modify('+5 days')) | date('d/m/y') }}</h2>
             {% set weekdays = {1: 'Lunes', 2: 'Martes', 3: 'Miércoles', 4: 'Jueves', 5: 'Viernes'} %}
             <table>
                 <thead>
                 <tr>
-                    <th>Hora</th>
                     {% for i in 1..5 %}
-                        <th>{{ weekdays[i] }}</th>
+                        <th colspan="3">{{ weekdays[i] }}</th>
                     {% endfor %}
                 </tr>
                 </thead>
@@ -24,11 +24,18 @@
                     5: '12:45 - 13:45',
                     6: '13:45 - 14:45'
                 } %}
-                {% for hour in 1..6 %}
-                    <tr>
-                        <td>{{ hourIntervals[hour] }}</td>
-                    </tr>
-                {% endfor %}
+                <tr>
+                    {% for trip in trips %}
+                        {% if trip.entrySlot == 0 or trip.exitSlot == 0 %}
+                            <td colspan="3">{{ trip.tripDate | date('d-m-Y') }} - Día festivo</td>
+                        {% else %}
+                            <td>{{ hourIntervals[trip.entrySlot] }}</td>
+                            <td>{{ hourIntervals[trip.exitSlot] }}</td>
+                            <td>{{ trip.driver }}</td>
+                        {% endif %}
+                    {% endfor %}
+                </tr>
+
                 </tbody>
             </table>
         </div>
@@ -38,7 +45,7 @@
         </div>
     </div>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             {% if success is defined and success %}
             Swal.fire({
                 title: '¡Cuadrante creado con éxito!',
