Change password error fixed

--- a/templates/security/change_password.html.twig
+++ b/templates/security/change_password.html.twig
@@ -7,7 +7,7 @@
             {{ form_row(form) }}
             <div class="buttons">
                 <button type="submit" class="primaryButton">Guardar</button>
-                <a href="{{ path('user_panel') }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
+                <a href="{{ path('main') }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
             </div>
             {{ form_end(form) }}
         </div>
