--- a/public/css/ExpansibleCard.css
+++ b/public/css/ExpansibleCard.css
@@ -26,6 +26,7 @@
     box-sizing: border-box;
     cursor: pointer;
     border-radius: 10px; /* Borde redondeado completo */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .expandable.expanded {
@@ -70,6 +71,7 @@
     padding: 0 15px; /* Quitar padding superior cuando está colapsado */
     box-sizing: border-box;
     border-radius: 0 0 10px 10px; /* Borde redondeado inferior */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .content.expanded {
