--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -113,13 +113,13 @@ CSS FOR PRIMARY BUTTON
 
  */
 .primaryButton{
-    border: 1px solid var(--text-color);
     border-radius: 10px;
     padding: 1rem;
     background-color: var(--primary-button);
     text-decoration: none;
     font-size: large;
     color: var(--original-back-color);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 .primaryButton:hover{
     background-color: var(--primary-button-hover);
@@ -132,13 +132,13 @@ CSS FOR SECONDARY BUTTON
 
  */
 .secondaryButton{
-    border: 1px solid var(--text-color);
     border-radius: 10px;
     padding: 1rem;
     background-color: var(--secondary-button);
     text-decoration: none;
     font-size: large;
     color: var(--original-back-color);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 .secondaryButton:hover{
     background-color: var(--secondary-button-hover);
@@ -151,13 +151,13 @@ CSS FOR DELETE BUTTON
 
  */
 .deleteButton{
-    border: 1px solid var(--text-color);
     border-radius: 10px;
     padding: 1rem;
     background-color: var(--delete-button);
     text-decoration: none;
     font-size: large;
     color: var(--original-back-color);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 .deleteButton:hover{
     background-color: var(--delete-button-hover);
